--- a/Photon-Tinker/Base.lproj/Main.storyboard
+++ b/Photon-Tinker/Base.lproj/Main.storyboard
@@ -652,19 +652,23 @@
                                 <size key="shadowOffset" width="0.0" height="2"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fPe-UK-gb5" customClass="SearchBarView" customModule="Particle" customModuleProvider="target">
-                                <rect key="frame" x="16" y="64" width="250" height="45"/>
+                                <rect key="frame" x="12" y="64" width="254" height="45"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Pfa-Xu-Iam">
-                                        <rect key="frame" x="34" y="7.5" width="216" height="30"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ctt-2Q-54B">
+                                        <rect key="frame" x="0.0" y="1.5" width="194" height="42"/>
+                                        <color key="backgroundColor" red="1" green="0.03624573524" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="Pfa-Xu-Iam">
+                                        <rect key="frame" x="44" y="7.5" width="210" height="30"/>
                                         <subviews>
                                             <textField opaque="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="249" verticalHuggingPriority="249" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Labas" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vss-qM-L3f" customClass="CustomizableTextField" customModule="Particle" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="158" height="30"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="146" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TbB-aB-Stn">
-                                                <rect key="frame" x="168" y="0.0" width="48" height="30"/>
+                                                <rect key="frame" x="162" y="0.0" width="48" height="30"/>
                                                 <state key="normal" title="Cancel">
                                                     <color key="titleColor" red="0.0" green="0.68235294117647061" blue="0.93725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </state>
@@ -675,7 +679,7 @@
                                         </subviews>
                                     </stackView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SearchIcon" translatesAutoresizingMaskIntoConstraints="NO" id="YsP-ZC-vKb">
-                                        <rect key="frame" x="0.0" y="10.5" width="24" height="24"/>
+                                        <rect key="frame" x="10" y="10.5" width="24" height="24"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="24" id="Bgz-Kx-kpc"/>
                                             <constraint firstAttribute="height" constant="24" id="dLL-aj-dme"/>
@@ -685,13 +689,18 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstItem="YsP-ZC-vKb" firstAttribute="centerY" secondItem="Pfa-Xu-Iam" secondAttribute="centerY" id="6a9-Dn-GhW"/>
-                                    <constraint firstItem="YsP-ZC-vKb" firstAttribute="leading" secondItem="fPe-UK-gb5" secondAttribute="leading" id="I0F-mf-xMM"/>
+                                    <constraint firstItem="YsP-ZC-vKb" firstAttribute="leading" secondItem="fPe-UK-gb5" secondAttribute="leading" constant="10" id="I0F-mf-xMM"/>
                                     <constraint firstAttribute="trailing" secondItem="Pfa-Xu-Iam" secondAttribute="trailing" id="JtZ-7Q-t9i"/>
+                                    <constraint firstItem="ctt-2Q-54B" firstAttribute="leading" secondItem="fPe-UK-gb5" secondAttribute="leading" id="Le6-Ha-NkY"/>
+                                    <constraint firstItem="ctt-2Q-54B" firstAttribute="centerY" secondItem="fPe-UK-gb5" secondAttribute="centerY" id="djX-d8-RrG"/>
                                     <constraint firstAttribute="height" constant="45" id="gBv-Cf-Hu3"/>
                                     <constraint firstItem="Pfa-Xu-Iam" firstAttribute="leading" secondItem="YsP-ZC-vKb" secondAttribute="trailing" constant="10" id="jA1-Vb-DZD"/>
+                                    <constraint firstItem="ctt-2Q-54B" firstAttribute="height" secondItem="Vss-qM-L3f" secondAttribute="height" constant="12" id="r2o-ya-9kl"/>
+                                    <constraint firstItem="ctt-2Q-54B" firstAttribute="trailing" secondItem="Vss-qM-L3f" secondAttribute="trailing" constant="4" id="rd0-Pz-L2z"/>
                                     <constraint firstItem="Pfa-Xu-Iam" firstAttribute="centerY" secondItem="fPe-UK-gb5" secondAttribute="centerY" id="tCk-MY-4I3"/>
                                 </constraints>
                                 <connections>
+                                    <outlet property="backgroundView" destination="ctt-2Q-54B" id="5xJ-lB-Vou"/>
                                     <outlet property="cancelButton" destination="TbB-aB-Stn" id="C3e-kA-NOS"/>
                                     <outlet property="imageView" destination="YsP-ZC-vKb" id="rQ0-y8-8ou"/>
                                     <outlet property="inputText" destination="Vss-qM-L3f" id="R2q-01-QuB"/>
@@ -727,7 +736,7 @@
                             <constraint firstItem="HSb-Q2-MhK" firstAttribute="centerY" secondItem="2Ds-AZ-r34" secondAttribute="centerY" constant="20" id="BhF-q9-8Pt"/>
                             <constraint firstItem="HSb-Q2-MhK" firstAttribute="centerX" secondItem="2Ds-AZ-r34" secondAttribute="centerX" id="DGb-m6-Do1"/>
                             <constraint firstItem="HSb-Q2-MhK" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="2Ds-AZ-r34" secondAttribute="leading" constant="20" id="OgI-0R-AbD"/>
-                            <constraint firstItem="fPe-UK-gb5" firstAttribute="leading" secondItem="doS-be-EZj" secondAttribute="leading" constant="16" id="QJ2-Ky-abf"/>
+                            <constraint firstItem="fPe-UK-gb5" firstAttribute="leading" secondItem="doS-be-EZj" secondAttribute="leading" constant="12" id="QJ2-Ky-abf"/>
                             <constraint firstItem="l8r-gu-33x" firstAttribute="top" secondItem="DmZ-hI-cQj" secondAttribute="bottom" constant="1" id="Qsq-bg-ftU"/>
                             <constraint firstItem="xo0-Cy-fNp" firstAttribute="centerY" secondItem="fPe-UK-gb5" secondAttribute="centerY" id="Qv4-Fp-ZNG"/>
                             <constraint firstItem="DmZ-hI-cQj" firstAttribute="leading" secondItem="doS-be-EZj" secondAttribute="leading" id="UVj-y1-Md2"/>
